# tradecore

./: .gitignore  CMakeLists.txt
cmake/: Dependencies.cmake
config/: default.toml
proto/: fix_messages.proto
scripts/: run_server.sh
src/: main.cpp
src/booking/: book_keeper.cpp  book_keeper.hpp  position.hpp  trade.hpp
src/core/: config.cpp  config.hpp  logging.hpp  metrics.hpp
src/instrument/: instrument.hpp
src/matching/: matching_engine.cpp  matching_engine.hpp  order_book.cpp  order_book.hpp
src/messaging/: protocol.cpp  protocol.hpp  zmq_server.cpp  zmq_server.hpp
src/orders/: order.hpp  order_manager.cpp  order_manager.hpp
tests/: CMakeLists.txt  test_book_keeper.cpp  test_config.cpp  test_integration.cpp  test_matching_engine.cpp  test_metrics.cpp  test_order_book.cpp  test_order_manager.cpp  test_protocol.cpp
